--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -10,7 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/bootstrap-datepicker": "^0.0.19",
+    "@types/react-bootstrap": "^0.32.36",
+    "axios": "^1.6.7",
+    "bootstrap": "^5.3.3",
+    "bootstrap-datepicker": "^1.10.0",
+    "bootstrap-icons": "^1.11.3",
+    "jquery": "^3.7.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
